update ToDoList, ToDoApp, ToDoAppTest, add nightly.yml